--- a/src/main/resources/assets/guarding/lang/en_us.json
+++ b/src/main/resources/assets/guarding/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.guarding.netherite_shield": "Netherite Shield",
   "enchantment.guarding.barbed": "Barbed",
   "enchantment.guarding.pummeling": "Pummeling",
   "enchantment.guarding.retribution": "Retribution",
