--- a/src/main/resources/assets/guarding/lang/en_us.json
+++ b/src/main/resources/assets/guarding/lang/en_us.json
@@ -9,5 +9,12 @@
   "subtitle.guarding.item.netherite_shield.block": "Shield blocks",
   "subtitle.guarding.item.netherite_shield.break": "Shield breaks",
   "subtitle.guarding.item.netherite_shield.parry": "Shield parries",
-  "subtitle.guarding.item.netherite_shield.equip": "Gear equips"
+  "subtitle.guarding.item.netherite_shield.equip": "Gear equips",
+
+  "advancements.guarding.story.decorate_shield_with_banner.title": "Shielding with Style!",
+  "advancements.guarding.story.decorate_shield_with_banner.desc": "Decorate a shield with a banner.",
+  "advancements.guarding.story.kill_mob_with_own_arrow.title": "Parry This, You Casual!",
+  "advancements.guarding.story.kill_mob_with_own_arrow.desc": "Kill a Skeleton or Pillager by parrying their own arrow.",
+  "advancements.guarding.nether.obtain_netherite_shield.title": "On Guard!",
+  "advancements.guarding.nether.obtain_netherite_shield.desc": "Use a Netherite Ingot to upgrade a shield."
 }
