Added enchantment descriptions
Added description for enchantments (also what Retribution enchantment to be mean?)

--- a/src/main/resources/assets/guarding/lang/en_us.json
+++ b/src/main/resources/assets/guarding/lang/en_us.json
@@ -5,6 +5,9 @@
   "enchantment.guarding.barbed": "Barbed",
   "enchantment.guarding.pummeling": "Pummeling",
   "enchantment.guarding.retribution": "Retribution",
+  "enchantment.guarding.barbed.description": "Applies thorns to the shield",
+  "enchantment.guarding.pummeling.description": "Increases parry knockback",
+  "enchantment.guarding.retribution.description": "",
   "subtitle.guarding.item.shield.parry": "Shield parries",
   "subtitle.guarding.item.netherite_shield.block": "Shield blocks",
   "subtitle.guarding.item.netherite_shield.break": "Shield breaks",
